--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "diacritic": "^0.0.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
